--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ buildscript {
         navigationVersion = "2.3.1"
         roomVersion = "2.2.5"
         testExtJunitVersion = "1.1.2"
+        retrofitVersion = "2.9.0"
+        moshiVersion = "1.11.0"
+        moshiConverterVersion = "2.7.2"
+        sandwichVersion = "1.0.6"
+        circleImgVersion = "3.1.0"
     }
 
     repositories {
