--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
         constraintLayoutVersion = "2.0.4"
         coroutinesVersion = "1.3.9"
         dataStoreVersion = "1.0.0-alpha02"
-        espressoVersion = "3.3.0"
         fragmentVersion = "1.3.0-beta01"
         gradleVersion = "4.1.0"
         hiltAndroidXVersion = "1.0.0-alpha02"
@@ -24,12 +23,26 @@ buildscript {
         materialVersion = "1.3.0-alpha03"
         navigationVersion = "2.3.1"
         roomVersion = "2.2.5"
-        testExtJunitVersion = "1.1.2"
         retrofitVersion = "2.9.0"
         moshiVersion = "1.11.0"
         moshiConverterVersion = "2.7.2"
         sandwichVersion = "1.0.6"
         circleImgVersion = "3.1.0"
+        // glide
+        glideVersion = "4.11.0"
+        glidePaletteVersion = "2.1.2"
+        // unit test
+        truthVersion = "1.0.1"
+        junitVersion = "4.13.1"
+        turbineVersion = "0.2.0"
+        robolectricVersion = "4.4"
+        androidxTest = "1.3.0"
+        androidxTestJunit = "1.1.2"
+        androidTestRunner = "1.3.0-beta01"
+        espressoVersion = "3.3.0"
+        mockitoKotlinVersion = "2.2.0"
+        mockitoInlineVersion = "3.5.13"
+        okhttpVersion = "4.9.0"
     }
 
     repositories {
